# errorta_app

./: .gitignore  .gitleaks.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
python/: README.md  cli.spec  cli_main.py  pyproject.toml  sidecar.spec  sidecar_main.py
python/errorta_agent_context/: __init__.py  pack.py  refs.py  routes.py  schema.py  store.py
python/errorta_aiar_connection/: __init__.py  config.py  models.py  redaction.py  resolver.py  status.py
python/errorta_alpha/: __init__.py  client.py  config.py  device.py  feedback.py  license.py  lifecycle.py  state.py  storage.py  telemetry.py  token.py
python/errorta_app/: __init__.py  build_info.py  corpus_catalog.py  mobile_lifecycle.py  mobile_server.py  origin.py  parent_watchdog.py  paths.py  provider_keys.py  server.py  settings.py  sidecar_advert.py
python/errorta_benchmark/: __init__.py  __main__.py  aggregator.py  prompts.py  report.py  runner.py
python/errorta_briefs/: __init__.py  bundle.py  bundle_import.py  compliance.py  connector.py  dryrun.py  lifecycle.py  parser.py  runner.py  schema.py  state.py
python/errorta_briefs_connectors/: __init__.py  _http.py  arxiv.py  generic_html.py  ntrs.py
python/errorta_cli/: SPEC_MAP.md  __init__.py  __main__.py  app.py  client.py  config.py  errors.py  onboarding.py  pager.py  poller.py  registry.py  repl.py  runstream.py  serve.py  session.py  shellinit.py  sidecar.py  teamdraft.py  verbosity.py  watch.py
python/errorta_corpus/: __init__.py  directory_ingest.py  listing.py  manifest.py  pipeline.py  refresh.py
python/errorta_council/: __init__.py  control.py  demo_seed.py  engine.py  fake_run.py  gateway_local.py  gateway_meta.py  inspection_audit.py  limits.py  local_context.py  paths.py  recovery.py  resources.py  room_store.py  run_store.py  scheduler.py  schema.py  state.py  validation.py
python/errorta_diagnostics/: __init__.py  bundle.py  lifecycle.py  log_buffer.py  redact.py
python/errorta_export/: __init__.py  checksum.py  copy.py  import_.py  manifest.py  planner.py  safe_path.py
python/errorta_extract/: __init__.py  docx.py  html.py  pdf.py  pptx.py  registry.py  structured.py  text.py  xlsx.py
python/errorta_hwdetect/: __init__.py  gpu_amd.py  gpu_apple.py  gpu_nvidia.py  recommendations.json  recommender.py  scanner.py
python/errorta_judge/: __init__.py  aiar_adapter.py  correction_draft.py  latency.py  metrics.py  replay.py  schema_guard.py
python/errorta_mobile/: __init__.py  activity.py  auth.py  coding_projection.py  config.py  devices.py  inbox.py  netif.py  pairing.py  projections.py  ratelimit.py  routes.py  tls.py
python/errorta_model_gateway/: __init__.py  audit.py  budget.py  connectivity.py  loop_bridge.py  policy.py  redaction.py  router.py  runtime.py  settings.py  storage.py
python/errorta_ollama/: __init__.py  detect.py  installer.py  known_hashes.json  lifecycle.py  pull.py  settings.py
python/errorta_policy/: __init__.py  engine.py  pending.py  types.py
python/errorta_project_grounding/: __init__.py  adapter.py  bootstrap.py  capabilities.py  context_packets.py  corpus_binding.py  ingest.py  memory_store.py  paths.py  pm_working_memory.py  remote_adapter.py  remote_config.py  retrieval.py  source_refs.py  update_pipeline.py
python/errorta_query/: __init__.py  aiar_retrieve.py  aiar_service_pipeline.py  backend.py  embeddings.py  grounding.py  models.py  pipeline.py  remote_pipeline.py  signature.py
python/errorta_residency/: __init__.py  config.py  probe.py
python/errorta_shell/: __init__.py  config.py  processes.py
python/errorta_tools/: __init__.py  catalog.py  elicitation.py  gateway.py  mcp_client.py  mcp_state.py  registry.py  result_store.py
python/errorta_tunnels/: __init__.py  manager.py
python/errorta_watch/: __init__.py  coordinator.py  ignore.py  ingest_bridge.py  poller.py  state.py
python/errorta_welcome/: __init__.py  downloader.py  ingest_bridge.py  pinned_hash.json
python/scripts/: demo_calculator_live.py  searxng_ddg_adapter.py  simulate_coding_grounding.py  validate_aiar_v024_live.py  validate_cli_combos_live.py  validate_council_live.py  validate_credibility_human_live.py  validate_f039_live.py  validate_f049_live.py  validate_f081_entailment_live.py  validate_f087_live.py  validate_f088_build_from_project_live.py  validate_f096_retrieve_live.py  validate_f127.py  validate_f127_live.py  validate_f128.py  validate_f129.py  validate_f_dist_01.py  validate_f_dist_01_live.py  validate_judge_live.py  validate_marathon_live.py
python/tests/: conftest.py  test_agent_context_capsules.py  test_aiar_adapter_f096.py  test_aiar_connection_authority.py  test_aiar_pin.py  test_aiar_pin_release_install.py  test_aiar_service_pipeline.py  test_async_claude_cli.py  test_async_codex_cli.py  test_async_cursor_cli.py  test_async_provider_handlers.py  test_async_provider_registry.py  test_auth_store.py  test_auth_stub.py  test_benchmark_aggregator.py  test_benchmark_real_mode.py  test_benchmark_realistic_fake.py  test_benchmark_runner.py  test_benchmark_wedge.py  test_briefs_bundle.py  test_briefs_bundle_import.py  test_briefs_compliance.py  test_briefs_connector_abc.py  test_briefs_connector_arxiv.py  test_briefs_connectors_registry.py  test_briefs_history.py  test_briefs_history_restore.py  test_briefs_library.py  test_briefs_lifecycle.py  test_briefs_parser.py  test_briefs_promote_e2e.py  test_briefs_routes.py  test_briefs_runner.py  test_briefs_schema.py  test_briefs_state.py  test_briefs_validate_dry_run.py  test_briefs_validate_markdown.py  test_build_info.py  test_cli_resolve_details.py  test_corpus_backend_healthz.py  (+91 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/macos/: entitlements.plist
src-tauri/src/: lib.rs  main.rs  paths.rs  remote_sidecar.rs  rollback.rs  shell_cmds.rs  shell_cmds_impl.rs  sidecar.rs  tray.rs  (+1 more)
(+1252 files in other folders)
