[package]
name = "errorta"
version = "0.1.0-alpha.0"
description = "Errorta — the local AI that admits when it's wrong."
authors = ["The Errorta Authors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "errorta_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Pulled transitively via tauri 2; declared explicitly so the remote-sidecar
# watcher in `remote_sidecar.rs` can call `tokio::time::sleep` without
# re-importing the singleton runtime by hand. The "time" feature is enough
# for the 10 s tunnel-watch interval; nothing here needs full tokio macros.
tokio = { version = "1", features = ["time"] }
# Optional — only pulled when the `updater-enabled` feature is on. Default
# builds do NOT depend on this. Activation gated to post-v0.6 signed releases;
# see docs/AUTO_UPDATER.md.
tauri-plugin-updater = { version = "2", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
# INERT until v0.6 signing lands — see docs/AUTO_UPDATER.md
updater-enabled = ["dep:tauri-plugin-updater"]
